Convert API to use mediator and automapper
