# MinecraftMapper/Mediator/Queries/LocationTypes/GetLocationTypesQuery.cs
@@ -2,29 +2,29 @@
 using System.Threading;
 using System.Threading.Tasks;
 using Microsoft.EntityFrameworkCore;
-using MinecraftMapper.Controllers.Models;
+using MinecraftMapper.Entities;
+using MinecraftMapper.Features.LocationTypes.Models;
 
 namespace MinecraftMapper.Mediator.Queries.LocationTypes
 {
-    public class GetLocationTypesQuery : IQuery<LocationTypeModel[]>
+    public class GetLocationTypesQuery : IQuery<LocationType[]>
     {
         
     }
 
-    public class GetLocationTypesQueryHandler : IQueryHandler<GetLocationTypesQuery, LocationTypeModel[]>
+    public class GetLocationTypesQueryHandler : IQueryHandler<GetLocationTypesQuery, LocationType[]>
     {
-        private MapperContext _context;
+        private readonly MapperContext _context;
         
         public GetLocationTypesQueryHandler(MapperContext context)
         {
             _context = context;
         }
         
-        public async Task<LocationTypeModel[]> Handle(GetLocationTypesQuery request, CancellationToken cancellationToken)
+        public async Task<LocationType[]> Handle(GetLocationTypesQuery request, CancellationToken cancellationToken)
         {
             return await _context.LocationTypes
                 .AsNoTracking()
-                .Select(l => new LocationTypeModel { Id = l.Id, IconClass = l.IconClass, Name = l.Name })
                 .OrderBy(l => l.Name)
                 .ToArrayAsync(cancellationToken);
         }
